// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List render test WHEN I dont provide data or getData THEN I should render loading 1`] = `
<div>
  <div
    className="sc-bdfBwQ ixcnvM"
  >
    <div
      className="sc-hKgILt eEaOus"
    >
      loading!!
    </div>
  </div>
</div>
`;

exports[`List render test WHEN I provide getData THEN I should render the list with the getData values 1`] = `
<div>
  <div
    className="sc-eCssSg hkzTLf"
  >
    <div
      className="sc-bdfBwQ ixcnvM"
    >
      <div
        className="sc-gsTCUz fFutaN"
      >
        <div
          className="sc-bdfBwQ ixcnvM"
        >
          <div>
            boo-1
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-eCssSg hkzTLf"
  >
    <div
      className="sc-bdfBwQ ixcnvM"
    >
      <div
        className="sc-gsTCUz fFutaN"
      >
        <div
          className="sc-bdfBwQ ixcnvM"
        >
          <div>
            boo-2
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-eCssSg hkzTLf"
  >
    <div
      className="sc-bdfBwQ ixcnvM"
    >
      <div
        className="sc-gsTCUz fFutaN"
      >
        <div
          className="sc-bdfBwQ ixcnvM"
        >
          <div>
            boo-3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List render test WHEN I provide initialData THEN I should render the list 1`] = `
<div>
  <div
    className="sc-eCssSg hkzTLf"
  >
    <div
      className="sc-bdfBwQ ixcnvM"
    >
      <div
        className="sc-gsTCUz fFutaN"
      >
        <div
          className="sc-bdfBwQ ixcnvM"
        >
          <div>
            foo-1
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-eCssSg hkzTLf"
  >
    <div
      className="sc-bdfBwQ ixcnvM"
    >
      <div
        className="sc-gsTCUz fFutaN"
      >
        <div
          className="sc-bdfBwQ ixcnvM"
        >
          <div>
            foo-2
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-eCssSg hkzTLf"
  >
    <div
      className="sc-bdfBwQ ixcnvM"
    >
      <div
        className="sc-gsTCUz fFutaN"
      >
        <div
          className="sc-bdfBwQ ixcnvM"
        >
          <div>
            foo-3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List render test WHEN I provide initialData and getData THEN I should render the list with the initialData 1`] = `
<div>
  <div
    className="sc-eCssSg hkzTLf"
  >
    <div
      className="sc-bdfBwQ ixcnvM"
    >
      <div
        className="sc-gsTCUz fFutaN"
      >
        <div
          className="sc-bdfBwQ ixcnvM"
        >
          <div>
            foo-1
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-eCssSg hkzTLf"
  >
    <div
      className="sc-bdfBwQ ixcnvM"
    >
      <div
        className="sc-gsTCUz fFutaN"
      >
        <div
          className="sc-bdfBwQ ixcnvM"
        >
          <div>
            foo-2
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-eCssSg hkzTLf"
  >
    <div
      className="sc-bdfBwQ ixcnvM"
    >
      <div
        className="sc-gsTCUz fFutaN"
      >
        <div
          className="sc-bdfBwQ ixcnvM"
        >
          <div>
            foo-3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
